Add sound based self identification

--- a/templates/configure.html
+++ b/templates/configure.html
@@ -13,7 +13,7 @@
         <label for="ssid"></label><input id="ssid" name="ssid" placeholder="Enter Wi-Fi AP name" required type="text"
                                          value="{{ ssid }}">
         <label for="password"></label><input id="password" name="password" placeholder="Enter Wi-Fi password" required
-                                             type="password"
+                                             type="text"
                                              value="{{ password }}">
         <button type="submit" value="Submit">Configure</button>
         <label id="result">{{ configure_result }}</label>
