--- a/static/style.css
+++ b/static/style.css
@@ -4,11 +4,39 @@ body {
     padding: 0;
 }
 
+menu-bar {
+    background: #333;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+.menu-bar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    border: 1px solid #ddd;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.menu-bar li {
+    margin: 0;
+    flex: 1;
+}
+.menu-bar a {
+    display: block;
+    color: #007BFF;
+    padding: 14px 20px;
+    text-decoration: none;
+    text-align: center;
+}
+
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
     flex-direction: column;
     gap: 10px;
 }
@@ -56,12 +84,19 @@ body {
 }
 
 #hostname {
-    margin-bottom: 20px;
     font-weight: bold;
 }
 
 #result {
     margin-top: 10px;
+}
+
+#command-result {
+    text-align: left;
+}
+
+.result {
+    font-weight: bold;
 }
 
 @media (max-width: 500px) {
